--- a/CarRental/Views/AdminUser/Index.cshtml
+++ b/CarRental/Views/AdminUser/Index.cshtml
@@ -2,4 +2,6 @@
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
+    Layout = "~/Views/Shared/_AdminLayout.cshtml";
+    ViewData["Title"] = "User";
 }
