--- a/CarRental/Views/Shared/_AdminLayout.cshtml
+++ b/CarRental/Views/Shared/_AdminLayout.cshtml
@@ -69,7 +69,7 @@
                                 </li>
                                 <li>
                                     <a class="dropdown-item @(ViewData["Title"]?.ToString() == "AddCustomer" ? "active fw-bold text-warning" : "")"
-                                       asp-area="" asp-controller="AdminUser" asp-action="AddCustomer">
+                                       asp-area="" asp-controller="Customer" asp-action="CustomerRegister">
                                         <i class="bi bi-person-plus-fill me-1"></i> Add Customer
                                     </a>
                                 </li>
